@@ -21,9 +21,9 @@ Collate: 'dimensions.r' 'helper-arrange.r' 'helper-col-wise.r'
     'helper-each.r' 'helper-margins.r' 'helper-quick-df.r'
     'helper-splat.r' 'helper-summarise.r' 'helper-try.r' 'immutable.r'
     'indexed-array.r' 'indexed-data-frame.r' 'indexed.r' 'join.r'
-    'loop-apply.r' 'ninteraction.r' 'ply-array.r' 'ply-data-frame.r'
-    'ply-iterator.r' 'ply-list.r' 'ply-mapply.r' 'ply-null.r'
-    'ply-replicate.r' 'progress.r' 'quote.r' 'rbind-matrix.r' 'rbind.r'
-    'simplify-array.r' 'simplify-data-frame.r' 'simplify-vector.r'
-    'split-array.r' 'split-data-frame.r' 'split-indices.r' 'split.r'
-    'utils.r'
+    'loop-apply.r' 'melt.r' 'ninteraction.r' 'ply-array.r'
+    'ply-data-frame.r' 'ply-iterator.r' 'ply-list.r' 'ply-mapply.r'
+    'ply-null.r' 'ply-replicate.r' 'progress.r' 'quote.r'
+    'rbind-matrix.r' 'rbind.r' 'simplify-array.r'
+    'simplify-data-frame.r' 'simplify-vector.r' 'split-array.r'
+    'split-data-frame.r' 'split-indices.r' 'split.r' 'utils.r'
