@@ -13,6 +13,12 @@ export(tryapply)
 export(idata.frame)
 export(join)
 useDynLib(plyr)
+export(melt)
+S3method(melt, default)
+S3method(melt, list)
+S3method(melt, data.frame)
+S3method(melt, matrix)
+S3method(melt, array)
 export(id)
 export(laply)
 export(daply)
