@@ -1,5 +1,9 @@
 plyr 1.2 (2010-XX-XX) ---------------------------------------------------
 
+* melt function moved from reshape to plyr - I've made this move because melt
+  fits naturally into the philosophy of data manipulation espoused by plyr. It
+  is the most commonly used method from reshape, and is useful without cast.
+
 * l*ply, d*ply, a*ply and m*ply all gain a .parallel argument that when TRUE,
   apply functions in parallel using a parallel backend registered with the
   foreach package:
@@ -16,7 +20,9 @@ plyr 1.2 (2010-XX-XX) ---------------------------------------------------
   #  user  system elapsed 
   # 0.020   0.011   1.038 
 
-* llply: in serial case, for loop replaced with custom C function that takes about 40% less time (or about 20% less time than lapply)
+* llply: in serial case, for loop replaced with custom C function that takes
+  about 40% less time (or about 20% less time than lapply). Note that as a
+  whole, llply still has much more overhead than lapply.
 
 plyr 1.1 (2010-07-19) ---------------------------------------------------
 
